--- a/Triviador/UI/forms/NumericQuestion.ui
+++ b/Triviador/UI/forms/NumericQuestion.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>876</width>
-    <height>490</height>
+    <width>748</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -152,6 +152,32 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
+         <spacer name="horizontalSpacer_6">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Minimum</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="ho1">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>50/50</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -168,9 +194,9 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="alegere_raspuns">
+         <widget class="QPushButton" name="ho2">
           <property name="text">
-           <string>Alegere răspuns</string>
+           <string>Alegere raspuns</string>
           </property>
          </widget>
         </item>
@@ -191,7 +217,7 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="sugerare_raspuns">
+         <widget class="QPushButton" name="ho3">
           <property name="text">
            <string>Sugerare răspuns</string>
           </property>
@@ -258,6 +284,9 @@
            <font>
             <pointsize>10</pointsize>
            </font>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignHCenter|Qt::AlignTop</set>
           </property>
          </widget>
         </item>
