--- a/Triviador/UI/forms/Profile.ui
+++ b/Triviador/UI/forms/Profile.ui
@@ -29,6 +29,12 @@
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
+    <property name="font">
+     <font>
+      <family>Palatino Linotype</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>Înapoi</string>
     </property>
