--- a/Triviador/UI/forms/MCQuestion.ui
+++ b/Triviador/UI/forms/MCQuestion.ui
@@ -28,13 +28,19 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>50</height>
+          <height>80</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QLabel" name="mcquestion">
+        <property name="font">
+         <font>
+          <family>MV Boli</family>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>TextLabel</string>
         </property>
@@ -54,7 +60,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>90</height>
+          <height>125</height>
          </size>
         </property>
        </spacer>
@@ -66,6 +72,12 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>MV Boli</family>
+          <pointsize>24</pointsize>
+         </font>
         </property>
         <property name="text">
          <string>TextLabel</string>
@@ -81,22 +93,28 @@
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeType">
-         <enum>QSizePolicy::MinimumExpanding</enum>
+         <enum>QSizePolicy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>70</height>
+          <height>110</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="7" column="0">
+        <item row="6" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QPushButton" name="ho1">
+            <property name="font">
+             <font>
+              <family>Palatino Linotype</family>
+              <pointsize>16</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>50/50</string>
             </property>
@@ -107,8 +125,14 @@
             <property name="enabled">
              <bool>false</bool>
             </property>
+            <property name="font">
+             <font>
+              <family>Palatino Linotype</family>
+              <pointsize>16</pointsize>
+             </font>
+            </property>
             <property name="text">
-             <string>Intreaba publicul</string>
+             <string>Intreabă publicul</string>
             </property>
            </widget>
           </item>
@@ -117,6 +141,12 @@
             <property name="enabled">
              <bool>false</bool>
             </property>
+            <property name="font">
+             <font>
+              <family>Palatino Linotype</family>
+              <pointsize>16</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>Sugereaza raspuns</string>
             </property>
@@ -124,38 +154,40 @@
           </item>
          </layout>
         </item>
-        <item row="0" column="0">
-         <widget class="QPushButton" name="a1">
-          <property name="text">
-           <string>PushButton</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="0">
          <widget class="QPushButton" name="a2">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
          </widget>
         </item>
-        <item row="6" column="0">
-         <spacer name="verticalSpacer">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
+        <item row="0" column="0">
+         <widget class="QPushButton" name="a1">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
           </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Fixed</enum>
+          <property name="text">
+           <string>PushButton</string>
           </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>78</width>
-            <height>30</height>
-           </size>
-          </property>
-         </spacer>
+         </widget>
         </item>
         <item row="5" column="0">
          <widget class="QPushButton" name="a4">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
@@ -163,6 +195,12 @@
         </item>
         <item row="2" column="0">
          <widget class="QPushButton" name="a3">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
