--- a/Triviador/UI/forms/SugestionAnswer.ui
+++ b/Triviador/UI/forms/SugestionAnswer.ui
@@ -47,6 +47,12 @@
           <height>200</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>MV Boli</family>
+          <pointsize>24</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>timer</string>
         </property>
@@ -61,18 +67,24 @@
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeType">
-         <enum>QSizePolicy::MinimumExpanding</enum>
+         <enum>QSizePolicy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>40</height>
+          <height>60</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QLabel" name="question">
+        <property name="font">
+         <font>
+          <family>MV Boli</family>
+          <pointsize>24</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>TextLabel</string>
         </property>
@@ -86,10 +98,13 @@
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>40</height>
+          <height>90</height>
          </size>
         </property>
        </spacer>
@@ -98,6 +113,12 @@
        <layout class="QGridLayout" name="gridLayout">
         <item row="5" column="0">
          <widget class="QPushButton" name="a4">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
@@ -105,6 +126,12 @@
         </item>
         <item row="1" column="0">
          <widget class="QPushButton" name="a2">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
@@ -112,6 +139,12 @@
         </item>
         <item row="0" column="0">
          <widget class="QPushButton" name="a1">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
@@ -119,6 +152,12 @@
         </item>
         <item row="2" column="0">
          <widget class="QPushButton" name="a3">
+          <property name="font">
+           <font>
+            <family>Palatino Linotype</family>
+            <pointsize>16</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>PushButton</string>
           </property>
