--- a/Triviador/UI/forms/Profile.ui
+++ b/Triviador/UI/forms/Profile.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>400</height>
+    <width>277</width>
+    <height>241</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,6 +40,32 @@
     </property>
     <property name="flat">
      <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="GameCount">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>100</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Game count: </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="WonGames">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>140</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Won games:</string>
     </property>
    </widget>
   </widget>
