--- a/Triviador/UI/forms/NumericQuestion.ui
+++ b/Triviador/UI/forms/NumericQuestion.ui
@@ -7,8 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>748</width>
-    <height>511</height>
-    <height>532</height>
+    <height>597</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,6 +17,13 @@
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QLabel" name="player_name">
+        <property name="text">
+         <string>TextLabel</string>
+        </property>
+       </widget>
+      </item>
       <item>
        <spacer name="verticalSpacer_8">
         <property name="orientation">
